0.11/_sources/checks_gallery/tabular/data_integrity/plot_columns_info.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/data_integrity/plot_columns_info.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_checks_gallery_tabular_data_integrity_plot_columns_info.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_data_integrity_plot_columns_info.py:


.. _plot_tabular_columns_info:

Columns Info
************

This notebook provides an overview for using and understanding the columns info check.

**Structure:**

* `What are columns info <#what-are-columns-info>`__
* `Generating data <#generating-data>`__
* `Run the check <#running-columns-info-check>`__

.. GENERATED FROM PYTHON SOURCE LINES 19-22

What are columns info
=======================
The ``ColumnsInfo`` check returns the role and logical type of each column (e.g. date, categorical, numerical etc.).

.. GENERATED FROM PYTHON SOURCE LINES 25-27

Imports
=======

.. GENERATED FROM PYTHON SOURCE LINES 27-33

.. code-block:: default

    import numpy as np
    import pandas as pd

    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import ColumnsInfo








.. GENERATED FROM PYTHON SOURCE LINES 34-36

Generating data
===============

.. GENERATED FROM PYTHON SOURCE LINES 36-47

.. code-block:: default


    num_fe = np.random.rand(500)
    cat_fe = np.random.randint(3, size=500)
    num_col = np.random.rand(500)
    date = range(1635693229, 1635693729)
    index = range(500)
    data = {'index': index, 'date': date, 'a': cat_fe, 'b': num_fe, 'c': num_col, 'label': cat_fe}
    df = pd.DataFrame.from_dict(data)

    dataset = Dataset(df, label='label', datetime_name='date', index_name='index', features=['a', 'b'], cat_features=['a'])








.. GENERATED FROM PYTHON SOURCE LINES 48-50

Running columns info check
==========================

.. GENERATED FROM PYTHON SOURCE LINES 50-53

.. code-block:: default


    check = ColumnsInfo()








.. GENERATED FROM PYTHON SOURCE LINES 54-56

.. code-block:: default


    check.run(dataset=dataset)





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2023 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Columns Info</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"76e18d0b23414d619aac442a397b41f2": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_85d2d7ead2f64efdbd10e61c5740bdf1", "IPY_MODEL_f0304c40c10f4bb9ae93060ac9ec464f", "IPY_MODEL_390bb6789e7247a083868989c42f3fdc", "IPY_MODEL_c9e15aab40aa43268c56b1f65f92bed6"], "layout": "IPY_MODEL_3ccaaa2b8bfa4ff085741a6863b4bf32"}}, "85d2d7ead2f64efdbd10e61c5740bdf1": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_303634d5ccb94805acdef9ab90ef7569", "style": "IPY_MODEL_5d22b1faf73e4b8c985a9ece05c80ba5", "value": "<h4><b>Columns Info</b></h4>"}}, "303634d5ccb94805acdef9ab90ef7569": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "5d22b1faf73e4b8c985a9ece05c80ba5": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "f0304c40c10f4bb9ae93060ac9ec464f": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_807d6f76917a472480b2275f03d3ae8c", "style": "IPY_MODEL_8ec2285f72d94506ba9882dfd00c62bb", "value": "<p>Return the role and logical type of each column. <a href=\"https://docs.deepchecks.com/0.11/checks_gallery/tabular/data_integrity/plot_columns_info.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "807d6f76917a472480b2275f03d3ae8c": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "8ec2285f72d94506ba9882dfd00c62bb": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "390bb6789e7247a083868989c42f3fdc": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_1e04a973e5104ad6941a58c1a298fd6f", "style": "IPY_MODEL_4127f08a3b9843598b97fa5a783a0b3a"}}, "1e04a973e5104ad6941a58c1a298fd6f": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "4127f08a3b9843598b97fa5a783a0b3a": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "c9e15aab40aa43268c56b1f65f92bed6": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_aedb21b4daeb4991b653fa1645d631b1", "IPY_MODEL_ad7bb920ccde4252a83278dd6d7e6b8e", "IPY_MODEL_07bf186cba44423aa6f4c401e06815f8"], "layout": "IPY_MODEL_8aaa206691774f3390a53e5b0ff2e28b"}}, "aedb21b4daeb4991b653fa1645d631b1": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_19195d6366a94fb290fe4da16a0d1b68", "style": "IPY_MODEL_3164980ce6df42659c7ecdae25e25a0b", "value": "<h5><b>Additional Outputs</b></h5>"}}, "19195d6366a94fb290fe4da16a0d1b68": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "3164980ce6df42659c7ecdae25e25a0b": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "ad7bb920ccde4252a83278dd6d7e6b8e": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_40f1c07d304546be80efd07830fad328", "style": "IPY_MODEL_4d6b1c6ab36f4adf90b887b53fa54500", "value": "<div>Showing only the top 10 columns, you can change it using n_top_columns param</div>"}}, "40f1c07d304546be80efd07830fad328": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "4d6b1c6ab36f4adf90b887b53fa54500": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "07bf186cba44423aa6f4c401e06815f8": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_e524c89970624e2886f9875fe4a17a6a", "style": "IPY_MODEL_64d8fa83eaff4927ab54a50f3a5a0836", "value": "<style type=\"text/css\">\n#T_375fd_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_375fd_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_375fd_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_375fd_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_375fd_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_375fd_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >index</th>\n      <th class=\"col_heading level0 col1\" >date</th>\n      <th class=\"col_heading level0 col2\" >label</th>\n      <th class=\"col_heading level0 col3\" >a</th>\n      <th class=\"col_heading level0 col4\" >b</th>\n      <th class=\"col_heading level0 col5\" >c</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_375fd_level0_row0\" class=\"row_heading level0 row0\" >role</th>\n      <td id=\"T_375fd_row0_col0\" class=\"data row0 col0\" >index</td>\n      <td id=\"T_375fd_row0_col1\" class=\"data row0 col1\" >date</td>\n      <td id=\"T_375fd_row0_col2\" class=\"data row0 col2\" >label</td>\n      <td id=\"T_375fd_row0_col3\" class=\"data row0 col3\" >categorical feature</td>\n      <td id=\"T_375fd_row0_col4\" class=\"data row0 col4\" >numerical feature</td>\n      <td id=\"T_375fd_row0_col5\" class=\"data row0 col5\" >other</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "e524c89970624e2886f9875fe4a17a6a": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "64d8fa83eaff4927ab54a50f3a5a0836": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "8aaa206691774f3390a53e5b0ff2e28b": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "3ccaaa2b8bfa4ff085741a6863b4bf32": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "76e18d0b23414d619aac442a397b41f2"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.019 seconds)


.. _sphx_glr_download_checks_gallery_tabular_data_integrity_plot_columns_info.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_columns_info.py <plot_columns_info.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_columns_info.ipynb <plot_columns_info.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
